LAB-2: added data class; tweet parsing is now in separate class; added grouping resulting tweets by hour

--- a/SELab2/pom.xml
+++ b/SELab2/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>json</artifactId>
             <version>20170516</version>
         </dependency>
+        <dependency>
+            <groupId>com.cognifide.securecq</groupId>
+            <artifactId>secure-cq</artifactId>
+            <version>1.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
