--- a/SELab3/refactoring/pom.xml
+++ b/SELab3/refactoring/pom.xml
@@ -24,6 +24,18 @@
             <artifactId>jetty-servlet</artifactId>
             <version>9.0.3.v20130506</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
