--- a/SE2Lab2/pom.xml
+++ b/SE2Lab2/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>akka-testkit_2.11</artifactId>
             <version>2.4.14</version>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.10.3</version>
+        </dependency>
 
         <dependency>
             <groupId>com.typesafe.akka</groupId>
