--- a/SE2Lab1/pom.xml
+++ b/SE2Lab1/pom.xml
@@ -57,6 +57,18 @@
             <artifactId>aspectjrt</artifactId>
             <version>1.8.13</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
